tests/errors/error_compare_types.nimmy
# Error: Cannot compare incompatible types
let x = "hello" < 5